[gd_scene load_steps=9 format=3 uid="uid://bhmeninmvc4"]

[ext_resource type="Texture2D" uid="uid://bubmknvpo7iua" path="res://assets/spaceAstronauts_002.png" id="1"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2"]
[ext_resource type="Script" path="res://scripts/AI/states_2D/idle-until-key.gd" id="3_asaqn"]
[ext_resource type="Script" path="res://scripts/AI/states_2D/go_to.gd" id="4_igblb"]
[ext_resource type="Script" path="res://scripts/AI/states_2D/follow.gd" id="5_h4p4t"]
[ext_resource type="Script" path="res://scripts/AI/states_2D/movement.gd" id="6_s0jde"]
[ext_resource type="Script" path="res://scripts/AI/states_2D/fire.gd" id="7_7f8ea"]

[sub_resource type="CapsuleShape2D" id="1"]
radius = 31.0
height = 85.605

[node name="player" type="CharacterBody2D"]
position = Vector2(14, 0)
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-14.5952, -0.663406)
texture = ExtResource("1")
region_rect = Rect2(0, 0, 95, 90)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-14, 0)
shape = SubResource("1")

[node name="weapons" type="Node2D" parent="."]

[node name="RHandHold" type="Marker2D" parent="."]
position = Vector2(16.9397, 23.3586)

[node name="states" type="Node2D" parent="."]

[node name="STATE_IDLE" type="Node2D" parent="states"]
script = ExtResource("3_asaqn")

[node name="STATE_GOTO" type="Node2D" parent="states"]
script = ExtResource("4_igblb")

[node name="STATE_FOLLOW" type="Node2D" parent="states"]
script = ExtResource("5_h4p4t")

[node name="STATE_MOVEMENT" type="Node2D" parent="states"]
script = ExtResource("6_s0jde")

[node name="STATE_FIRE" type="Node2D" parent="states"]
script = ExtResource("7_7f8ea")
